# sphinx_hyperhelp

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: basic_ci.yaml
sphinx_hyperhelp/: __init__.py  __main__.py  help_builder.py  help_writer.py  hyperhelp.py
tests/: conftest.py  test_directives.py  test_hyperhelp.py  test_links.py  test_table.py  utils.py
