[tool.poetry]
name = "sphinx_hyperhelp"
version = "0.1.0"
description = "Builder for Sphinx documentation, to the HyperHelp format, for Sublime Text reading"
authors = ["Guillaume Wenzek"]
license = "BSD-3-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
Sphinx = "^4.0.2"
sphinxcontrib-websupport = "^1.2.4"
func-argparse = "^1.1.1"

[tool.poetry.dev-dependencies]
black = "^21.5b2"
isort = "^5.8.0"
pytest = "^6.2.4"
mypy = "^0.902"
types-docutils = "^0.1.6"

[tool.poetry.plugins."sphinx.builders"]
"hyperhelp" = "sphinx_hyperhelp"

[tool.poetry.scripts]
"sphinx_hyperhelp" = "sphinx_hyperhelp:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.isort]
profile = "black"
src_paths = ["tests", "sphinx_hyperhelp"]

[tool.mypy]
python_version = 3.8
files = "tests/**/*.py,sphinx_hyperhelp/**/*.py"
check_untyped_defs = true
show_error_codes = true
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_configs = true
